--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -230,7 +230,9 @@ jobs:
           crumb=$(curl ${{ secrets.JenkinsUrl }}/crumbIssuer/api/json --user "${{ secrets.JenkinsUser }}:${{ secrets.JenkinsPassword }}")
           echo $crumb
           crumb=${crumb#*"crumb\":\""}
+          echo $crumb
           crumb=${crumb%%\"*}
+          echo $crumb
           parameter="[{'name':'REPOPATH', 'value':'/repos'}, {'name':'version', 'value':$version}, {'name':'emqx_ce', 'value':true}, {'name':'emqx_ee', 'value':false}]"
-          curl -X POST ${{ secrets.JenkinsUrl }}/job/05_EMQX_Upload_Repos/build --header "Jenkins-Crumb:${crumb}" --user ${{ secrets.JenkinsUser }}:${{ secrets.JenkinsPassword }}  --data-urlencode json="{'parameter': ${parameter}}"
+          curl -X POST ${{ secrets.JenkinsUrl }}/job/05_EMQX_Upload_Repos/build --header "Jenkins-Crumb:$crumb" --user ${{ secrets.JenkinsUser }}:${{ secrets.JenkinsPassword }}  --data-urlencode json="{'parameter': ${parameter}}"
         fi
