--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -228,5 +228,5 @@ jobs:
         version=$(echo ${{ github.ref }} | sed -r  "s .*/.*/(.*) \1 g")
         version=v4.0-rc.4
         if [ ! -z $(echo $version | grep -oE "v[0-9]+\.[0-9]+(\.[0-9]+)?") ]; then
-          curl -H "Authorization: token ${{ secrets.AccessToken }}" -H "Accept: application/vnd.github.everest-preview+json" -H "Content-Type: application/json" -X POST -d '{"event_type":"update_repos","client_payload":{"version": "${version}","emqx_ce":"true","emqx_ee":"false"}}' https://api.github.com/repos/emqx/emqx-packages-docker/dispatches
+          curl -H "Authorization: token ${{ secrets.AccessToken }}" -H "Accept: application/vnd.github.everest-preview+json" -H "Content-Type: application/json" -X POST -d "{'event_type':'update_repos','client_payload':{'version': '$version','emqx_ce':true,'emqx_ee':false}}" https://api.github.com/repos/emqx/emqx-packages-docker/dispatches
         fi
