--- a/.github/workflows/build_packages.yaml
+++ b/.github/workflows/build_packages.yaml
@@ -100,8 +100,8 @@ jobs:
         version=$(echo ${{ github.ref }} | sed -r  "s .*/.*/(.*) \1 g")
         sudo docker run --rm --privileged multiarch/qemu-user-static:register --reset
         sudo docker run -i --name $SYSTEM-build -e EMQX_DEPS_DEFAULT_VSN=$version -e SYSTEM=$SYSTEM -v $(pwd):/emqx-rel emqx/build-env:$ERL_OTP-$SYSTEM sh -c "cd /emqx-rel/.github/workflows/script; if [ -z $(echo $SYSTEM | grep -o raspbian) ];then EMQX_NAME=emqx ./build.sh; fi; EMQX_NAME=emqx-edge ./build.sh"
-        cd _packages/emqx && for var in $(ls emqx-$SYSTEM-* ); do sudo sh -c "sha256sum $var | awk '{print $1}' > $var.sha256"; done && cd -
-        cd _packages/emqx-edge/&& for var in $(ls emqx-edge-$SYSTEM-* ); do sudo sh -c "sha256sum $var | awk '{print $1}' > $var.sha256"; done && cd -
+        cd _packages/emqx && for var in $(ls emqx-$SYSTEM-* ); do sudo bash -c "echo $(sha256sum $var | awk '{print $1}') > $var.sha256"; done && cd -
+        cd _packages/emqx-edge/&& for var in $(ls emqx-edge-$SYSTEM-* ); do sudo bash -c "echo $(sha256sum $var | awk '{print $1}') > $var.sha256"; done && cd -
     - name: set aws
       run: |
         curl "https://d1vvhvl2y92vvt.cloudfront.net/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
@@ -150,10 +150,10 @@ jobs:
         sudo docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
         sudo EMQX_DEPS_DEFAULT_VSN=$version ARCH=$ARCH QEMU_ARCH=$QEMU_ARCH TARGET=emqx/emqx make -C emqx-rel/deploy/docker 
         sudo EMQX_DEPS_DEFAULT_VSN=$version ARCH=$ARCH QEMU_ARCH=$QEMU_ARCH TARGET=emqx/emqx make -C emqx-rel/deploy/docker save
-        cd emqx-rel/_packages/emqx && for var in $(ls emqx-docker-* ); do sudo sh -c "sha256sum $var | awk '{print $1}' > $var.sha256"; done && cd -
+        cd emqx-rel/_packages/emqx && for var in $(ls emqx-docker-* ); do sudo bash -c "echo $(sha256sum $var | awk '{print $1}') > $var.sha256"; done && cd -
         sudo EMQX_DEPS_DEFAULT_VSN=$version ARCH=$ARCH QEMU_ARCH=$QEMU_ARCH TARGET=emqx/emqx-edge make -C emqx-rel/deploy/docker 
         sudo EMQX_DEPS_DEFAULT_VSN=$version ARCH=$ARCH QEMU_ARCH=$QEMU_ARCH TARGET=emqx/emqx-edge make -C emqx-rel/deploy/docker save
-        cd emqx-rel/_packages/emqx-edge && for var in $(ls emqx-edge-docker-* ); do sudo sh -c "sha256sum $var | awk '{print $1}' > $var.sha256"; done && cd -
+        cd emqx-rel/_packages/emqx-edge && for var in $(ls emqx-edge-docker-* ); do sudo bash -c "echo $(sha256sum $var | awk '{print $1}') > $var.sha256"; done && cd -
     - name: docker test
       if: matrix.arch[0] == 'amd64'
       run: |
@@ -188,13 +188,18 @@ jobs:
         aws2 configure set aws_access_key_id ${{ secrets.AwsAccessKeyId }}
         aws2 configure set aws_secret_access_key ${{ secrets.AwsSecretAccessKey }}
         aws2 configure set default.region us-west-2
+    - name: install dos2unix
+      run: sudo apt-get update && sudo apt install -y dos2unix
     - name: get packages
       run: |
         version=$(echo ${{ github.ref }} | sed -r  "s .*/.*/(.*) \1 g")
         mkdir -p packages
         aws2 s3 cp --recursive s3://packages.emqx.io/emqx-ce/$version ./packages
         aws2 s3 cp --recursive s3://packages.emqx.io/emqx-edge/$version ./packages
-        cd packages && for var in $( ls |grep emqx |grep -v sha256); do echo "$(cat $var.sha256) $var" | sha256sum -c || echo "$var check sha256 error" && exit 1 ;done
+        cd packages && for var in $( ls |grep emqx |grep -v sha256); do 
+          dos2unix $var.sha256
+          echo "$(cat $var.sha256) $var" | sha256sum -c || echo "$var check sha256 error" && exit 1 
+        done
     - uses: actions/checkout@v2
       with:
         path: emqx-rel
