--- a/.github/workflows/openssl_on_mac.yaml
+++ b/.github/workflows/openssl_on_mac.yaml
@@ -24,8 +24,7 @@ jobs:
         EMQX_DEPS_DEFAULT_VSN=$version make emqx
         mkdir -p _packages/emqx
         cd ./_build/emqx/rel && zip -rq emqx-macosx-$version.zip emqx && cd - && mv ./_build/emqx/rel/emqx-macosx-$version.zip _packages/emqx
-        ./_build/emqx/rel/emqx/bin/emqx start
-        ./_build/emqx/rel/emqx/bin/emqx stop
+        cd ./_build/emqx/rel/emqx && otool -L lib/crypto-*/priv/lib/crypto.so
       - uses: actions/upload-artifact@v1
         with:
           name: emqx-macosx
