--- a/rebar.config
+++ b/rebar.config
@@ -143,8 +143,11 @@
 {edge_relx_overlay, []}.
 
 {edoc_opts, [{preprocess,true}]}.
+
 {erl_opts, [warn_unused_vars,warn_shadow_vars,warn_unused_import,
-            warn_obsolete_guard,debug_info]}.
+            warn_obsolete_guard,no_debug_info,compressed]}.
+
+{overrides, [{add, [{erl_opts, [no_debug_info, compressed]}]}]}.
 
 {xref_checks, [undefined_function_calls,undefined_functions,locals_not_used,
                deprecated_function_calls,warnings_as_errors,
