Update chart version

--- a/.github/workflows/build_packages.yaml
+++ b/.github/workflows/build_packages.yaml
@@ -4,41 +4,40 @@ on:
   push:
     branches:
       - develop
-      - master
     tags:
       - v*
   repository_dispatch:
     types: [build_packages]
 
 jobs:
-  win:
-    runs-on: windows-latest
+  # windows:
+  #   runs-on: windows-latest
 
-    steps:
-    - uses: actions/checkout@v1
-    - name: checkout
-      run: git checkout $("${{ github.ref }}" | sed -r 's .*/.*/(.*) \1 g')
-    - uses: ilammy/msvc-dev-cmd@v1
-    - name: build
-      run: |
-        set-executionpolicy remotesigned -s cu
-        iex (new-object net.webclient).downloadstring('https://get.scoop.sh')
-        scoop install sudo curl 7zip aws erlang
-        $env:path + ";" + $env:USERPROFILE + "\scoop\shims"
-        make emqx
-        mkdir -p _packages/emqx
-        $pkg_name = "emqx-windows-$("${{ github.ref }}" | sed -r 's .*/.*/(.*) \1 g').zip"
-        Compress-Archive -Path _build/emqx/rel/emqx -DestinationPath _build/emqx/rel/$pkg_name
-        mv _build/emqx/rel/$pkg_name _packages/emqx
-        sudo ./_build/emqx/rel/emqx/bin/emqx start
-        sudo ./_build/emqx/rel/emqx/bin/emqx stop
-        sudo ./_build/emqx/rel/emqx/bin/emqx install
-        sudo ./_build/emqx/rel/emqx/bin/emqx uninstall
-        Get-FileHash -Path "_packages/emqx/$pkg_name" | Format-List | grep 'Hash' | awk '{print $3}'  > _packages/emqx/$pkg_name.sha256
-        aws configure set aws_access_key_id ${{ secrets.AwsAccessKeyId }} 
-        aws configure set aws_secret_access_key ${{ secrets.AwsSecretAccessKey }} 
-        aws configure set default.region us-west-2
-        aws s3 cp --recursive ./_packages/emqx  s3://packages.emqx.io/emqx-ce/$("${{ github.ref }}" | sed -r 's .*/.*/(.*) \1 g')
+  #   steps:
+  #   - uses: actions/checkout@v1
+  #   - name: checkout
+  #     run: git checkout $("${{ github.ref }}" | sed -r 's .*/.*/(.*) \1 g')
+  #   - uses: ilammy/msvc-dev-cmd@v1
+  #   - name: build
+  #     run: |
+  #       set-executionpolicy remotesigned -s cu
+  #       iex (new-object net.webclient).downloadstring('https://get.scoop.sh')
+  #       scoop install sudo curl 7zip aws erlang
+  #       $env:path + ";" + $env:USERPROFILE + "\scoop\shims"
+  #       make emqx
+  #       mkdir -p _packages/emqx
+  #       $pkg_name = "emqx-windows-$("${{ github.ref }}" | sed -r 's .*/.*/(.*) \1 g').zip"
+  #       Compress-Archive -Path _build/emqx/rel/emqx -DestinationPath _build/emqx/rel/$pkg_name
+  #       mv _build/emqx/rel/$pkg_name _packages/emqx
+  #       sudo ./_build/emqx/rel/emqx/bin/emqx start
+  #       sudo ./_build/emqx/rel/emqx/bin/emqx stop
+  #       sudo ./_build/emqx/rel/emqx/bin/emqx install
+  #       sudo ./_build/emqx/rel/emqx/bin/emqx uninstall
+  #       Get-FileHash -Path "_packages/emqx/$pkg_name" | Format-List | grep 'Hash' | awk '{print $3}'  > _packages/emqx/$pkg_name.sha256
+  #       aws configure set aws_access_key_id ${{ secrets.AwsAccessKeyId }}
+  #       aws configure set aws_secret_access_key ${{ secrets.AwsSecretAccessKey }}
+  #       aws configure set default.region us-west-2
+  #       aws s3 cp --recursive ./_packages/emqx  s3://packages.emqx.io/emqx-ce/$("${{ github.ref }}" | sed -r 's .*/.*/(.*) \1 g')
 
   # mac:
   #   runs-on: macos-latest
@@ -169,8 +168,8 @@ jobs:
   upload:
     runs-on: ubuntu-latest
 
-    # needs: [win, mac, linux, docker]
-    needs: [win, linux, docker]
+    # needs: [windows, mac, linux, docker]
+    needs: [linux, docker]
 
     steps:
     - name: set aws
