--- a/.github/workflows/run_test_cases.yaml
+++ b/.github/workflows/run_test_cases.yaml
@@ -20,7 +20,7 @@ jobs:
         - name: docker-compose up
           run:  docker-compose -p emqx_auto_func_test -f .ci/docker-compose.yaml up -d --build
         - name: get deps
-          run:  docker exec emqx_auto_func_test_emqx_1 bash -c "make -C /emqx-rel deps-emqx"
+          run:  docker exec emqx_auto_func_test_emqx_1 bash -c "cd /emqx-rel && make deps-emqx"
         - name: set config files
           run: |
             cd _build/emqx/lib
@@ -44,7 +44,7 @@ jobs:
               fi
             done
         - name: run all test cases
-          run: docker exec emqx_auto_func_test_emqx_1 bash -c "make -C /emqx-rel ct"
+          run: docker exec emqx_auto_func_test_emqx_1 bash -c "cd /emqx-rel && make ct"
         - uses: actions/upload-artifact@v1
           if: always()
           with:
