--- a/.github/workflows/run_test_cases.yaml
+++ b/.github/workflows/run_test_cases.yaml
@@ -21,6 +21,11 @@ jobs:
           run:  docker-compose -p emqx_auto_func_test -f .ci/docker-compose.yaml up -d --build
         - name: get deps
           run:  docker exec emqx_auto_func_test_emqx_1 bash -c "cd /emqx-rel && EMQX_DEPS_DEFAULT_VSN=develop make deps-emqx"
+        - uses: actions/upload-artifact@v1
+          if: failed()
+          with:
+            name: rebar3.crashdump
+            path: rebar3.crashdump
         - name: set config files
           run: |
             cd _build/emqx/lib
